--- a/Loginpage.html
+++ b/Loginpage.html
@@ -3,33 +3,42 @@
 <head>
 <title>Basic Page</title>
 <style>
-	button{
-	padding:10px;
-	}
 	
-	
-	body { font-family: "Product Sans"; }
+	body { font-family: "Product Sans";font-size: 20px; }
 
-	input[type='text'] {font-size: 14px; font-family: "Product Sans";}
+	input[type='text'] {width: 100%; height:25px ; font-size: 14px; font-family: "Product Sans";}
+	input[type='email'] {width: 100%; height:25px ;font-size: 14px; font-family: "Product Sans";}
+	input[type='number'] {width: 100%; height:25px ;font-size: 14px; font-family: "Product Sans";}
+	input[type='date'] {width: 70%; height:25px ;font-size: 14px; font-family: "Product Sans";}
 
-	input[type='email'] {font-size: 14px; font-family: "Product Sans";}
-	
 	form { 
-		margin: 0 auto; 
-		width:250px;
+		border: 1px solid coral;
+		border-radius: 10px;
+		width: 60%;
+		margin: auto;
+		padding: 20px;
+		text-align: left;
+		background-color:whitesmoke;
+	}
+	.form2{
+		border: 0px ;
+		border-radius: 10px;
+		width: 60%;
+		margin: auto;
+		padding: 10px;
+		text-align: center;
+		background-color:white;
 	}
 	
 	fieldset {
   		margin: 20px;
   		padding: 0 10px 10px;
-  		border: 1px solid #666;
-  		border-radius: 8px;
-  		box-shadow: 0 0 10px #666;
+  		border: 0px;
+  		border-radius: 10px;
  		padding-top: 10px;
 	}
 	legend {
- 	 padding: 2px 4px;
- 	 background: #fff;
+ 		padding: 10px 2px;
 	}
 	fieldset > legend {
   	float: left;
@@ -45,10 +54,9 @@
   	color: white;
   	padding: 8px 20px;
   	text-align: center;
-	text-decoration: none;
   	display: inline-block;
   	font-size: 14px;
-  	margin: 4px 2px;
+  	margin: 10px 0px;
   	cursor: pointer;
 	}
 
@@ -57,22 +65,22 @@
 </style>
 </head>
 <body>
-	
 	<fieldset>
-		<form>
+		<form class="form2">
 			<div><h2>Schedule a Call</h2></div>
 		</form>
 		<form>
+			
 			<div>
-				<label >Name:</label><br/>
+				<label>Name:</label>
 				<input required id="inpName" type="text" placeholder="Enter Name..." >
 			</div>
 			<di>
-				<label>Email:</label><br/>
+				<label>Email:</label>
 				<input required id="inpMail" type="email" placeholder="Enter Email..." ><br/>
 			</div>
 			<div>
-				<label>Phone:</label><br/>
+				<label>Phone:</label>
 				<input  required id="inpPhone" type="number" placeholder="Enter Phone Number..."><br/>
 			</div>
 			<div>
@@ -91,15 +99,15 @@
 
 			<div>
 				<button class="button button3" type="button" id="btn">Submit</button>
-			</div>
-			
-		</form>
-		
+			</div>	
+		</form>	
 	</fieldset>	
 	<fieldset>
-		<legend>Local Storage</legend>
+		<legend><h3>Local Storage</h3></legend>
 		<div id="msg">
-			<pre></pre>
+			<ul>
+				<li></li> 
+			</ul>
 		</div>
 	</fieldset>
 	
@@ -121,7 +129,7 @@
 			document.forms[0].reset(); 
 
 			console.warn('added' , {userDetailArr} );
-			let pre = document.querySelector('#msg pre');
+			let pre = document.querySelector('#msg li');
             pre.textContent = '\n' + JSON.stringify(userDetailArr, '\t',2);
 
             localStorage.setItem('UserDetailList', JSON.stringify(userDetailArr) );
